refactor: skip interactive prompts in CI environments and add PostgreSQL ICU dependency
**CLI Changes:**
- Add non-interactive environment detection in doctor command (CI, GITHUB_ACTIONS, no TTY)
- Skip action prompts when running in non-interactive environments

**Docker Changes:**
- Add libicu74 package installation to Dockerfile with comment explaining PostgreSQL internationalization support requirement

**Test Changes:**
- Update MySQL dump fixture version from 8.0.36 to 8.0.40

--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -51,6 +51,7 @@ RUN apt-get update && apt-get install -y \
 # libaio1: async I/O library required by MySQL
 # libncurses6: terminal library required by MariaDB client
 # libxml2: XML library required by PostgreSQL (hostdb binaries compiled with XML support)
+# libicu74: ICU library required by PostgreSQL (for internationalization support)
 # sudo: needed for non-root user to run privileged commands
 RUN apt-get update && apt-get install -y \
     git \
@@ -62,6 +63,7 @@ RUN apt-get update && apt-get install -y \
     libaio1t64 \
     libncurses6 \
     libxml2 \
+    libicu74 \
     sudo \
     && rm -rf /var/lib/apt/lists/*
 
