--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 on:
   pull_request:
     branches: [main]
-  # TODO delete this push test when done with branch
-  push:
-    branches: [claude/mysql-hostdb-binary-Yy1O6]
+  # TODO uncomment to test on dev branch push
+  # push:
+  #   branches: [dev]
   workflow_dispatch:
 
 # =============================================================================
@@ -400,7 +400,6 @@ jobs:
   # ============================================
   # Redis Integration Tests
   # Uses SpinDB to download and manage Redis binaries from hostdb
-  # NOTE: Redis does not support Windows natively, so Windows is excluded
   # ============================================
   test-redis:
     name: Redis (${{ matrix.os }})
@@ -413,7 +412,7 @@ jobs:
           - ubuntu-24.04
           - macos-15 # Intel
           - macos-14 # ARM64
-          # Windows excluded: Redis has no native Windows support
+          - windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
