--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "test:sqlite": "node --import tsx --test --experimental-test-isolation=none tests/integration/sqlite.test.ts",
     "test:mongodb": "node --import tsx --test --experimental-test-isolation=none tests/integration/mongodb.test.ts",
     "test:redis": "node --import tsx --test --experimental-test-isolation=none tests/integration/redis.test.ts",
+    "test:valkey": "node --import tsx --test --experimental-test-isolation=none tests/integration/valkey.test.ts",
     "test:unit": "node --import tsx --test --experimental-test-isolation=none tests/unit/*.test.ts",
     "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
     "test:hostdb-sync": "node --import tsx --test --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
-    "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:mongodb test:redis",
+    "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:mongodb test:redis test:valkey",
     "test:all": "run-s test:unit test:integration",
     "test:local": "./scripts/test-local.sh",
     "test:local:quick": "./scripts/test-local.sh --quick",
