--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -27,6 +27,7 @@
 # - MariaDB: server + client tools (mariadb, mariadb-dump, mariadb-admin)
 # - MongoDB: server + client tools (mongod, mongosh, mongodump, mongorestore)
 # - Redis: server + client tools (redis-server, redis-cli)
+# - Valkey: server + client tools (valkey-server, valkey-cli)
 # - SQLite: sqlite3, sqldiff, sqlite3_analyzer, sqlite3_rsync
 
 FROM ubuntu:22.04
