refactor: exclude Windows from Valkey CI tests and fix binary extraction for Windows archive structure
**CI Changes:**
- Add comment explaining Windows exclusion (Valkey does not provide Windows binaries)
- Remove windows-latest from test-valkey matrix
- Add inline comment about hostdb missing win32-x64 builds

**Binary Manager Changes:**
- Update moveExtractedEntries to handle Windows archive structure (binaries directly in valkey/redis directory)
- Add logic to detect bin/ subdirectory presence

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -454,6 +454,7 @@ jobs:
   # ============================================
   # Valkey Integration Tests
   # Uses SpinDB to download and manage Valkey binaries from hostdb
+  # NOTE: Windows excluded - Valkey does not provide Windows binaries
   # ============================================
   test-valkey:
     name: Valkey (${{ matrix.os }})
@@ -466,7 +467,7 @@ jobs:
           - ubuntu-24.04
           - macos-15 # Intel
           - macos-14 # ARM64
-          - windows-latest
+          # Windows excluded: Valkey does not provide Windows binaries (hostdb has no win32-x64 builds)
     steps:
       - name: Checkout
         uses: actions/checkout@v4
