refactor: update macOS CI runners to macos-15 (Intel) and macos-14 (ARM64)
- Change macos-15 from ARM64 (Apple Silicon) to Intel
- Change macos-13 to macos-14 for ARM64 testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,8 @@ jobs:
         os:
           - ubuntu-22.04
           - ubuntu-24.04
-          - macos-15 # ARM64 (Apple Silicon)
-          - macos-13 # Intel x64
+          - macos-15 # Intel
+          - macos-14 # ARM64
           - windows-latest
     steps:
       - name: Checkout
