chore: bump version to 0.19.2 with CLAUDE.md refactor and MIGRATION.md extraction
- Update version from 0.19.1 to 0.19.2 in package.json
- Add v0.19.2 release section to CHANGELOG.md documenting documentation improvements
- Extract historical migration guide from CLAUDE.md to new MIGRATION.md file
- Reduce CLAUDE.md from 1043 to 271 lines (74% reduction)
- Add Related Documentation table linking to STYLEGUIDE, FEATURE, ARCHITECTURE, MIGRATION, ENGINES, TODO, CHANGELOG
- Add Supported Versions table with query

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.19.1",
+  "version": "0.19.2",
   "description": "Zero-config Docker-free local database containers. Create, backup, and clone a variety of popular databases.",
   "type": "module",
   "bin": {
@@ -27,7 +27,7 @@
     "test:local": "./scripts/test-local.sh",
     "test:local:quick": "./scripts/test-local.sh --quick",
     "test:local:fresh": "./scripts/test-local.sh --fresh",
-    "test:docker": "docker build -t spindb-e2e -f tests/docker/Dockerfile . && docker run --rm spindb-e2e; docker rmi spindb-e2e 2>/dev/null || true",
+    "test:docker": "bash tests/docker/run-docker-test.sh",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
     "prepare": "husky"
