refactor: improve test diagnostics and update ClickHouse version handling from 25 to 25.12
**CI Workflow:**
- Update ClickHouse cache key from spindb-clickhouse-25-v2 to spindb-clickhouse-25.12
- Update ClickHouse download command from version 25 to 25.12
- Update container creation command to use --db-version 25.12

**Version Maps:**
- Add 1-part version mapping: '25' -> '25.12.3.21' in CLICKHOUSE_VERSION_MAP
- Add comment explaining 1-part format maps year to latest release

**CLI E2E Tests:**
- Add stderr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -878,15 +878,15 @@ jobs:
         id: ch-cache
         with:
           path: ~/.spindb/bin
-          key: spindb-clickhouse-25-v2-${{ runner.os }}-${{ runner.arch }}
+          key: spindb-clickhouse-25.12-${{ runner.os }}-${{ runner.arch }}
 
       - name: Install ClickHouse via SpinDB
-        run: pnpm start engines download clickhouse 25
+        run: pnpm start engines download clickhouse 25.12
 
       - name: Create container with seed data
         shell: bash
         run: |
-          pnpm start create ch-rename-test --engine clickhouse --db-version 25 --no-start
+          pnpm start create ch-rename-test --engine clickhouse --db-version 25.12 --no-start
           pnpm start start ch-rename-test
           # Wait for ready (ClickHouse takes longer to start)
           for i in {1..60}; do
