--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -919,7 +919,11 @@ jobs:
       - name: Verify initial data
         shell: bash
         run: |
-          COUNT=$(pnpm start run ch-rename-test -c "SELECT count() FROM testdb.test_data;" -d testdb 2>&1 | tail -n 4 | grep -oE '[0-9]+' | head -1)
+          echo "Full query output:"
+          pnpm start run ch-rename-test -c "SELECT count() FROM testdb.test_data;" -d testdb || echo "Query failed with exit code $?"
+          echo "---"
+          # ClickHouse output is minimal - just the number, so grep the whole output
+          COUNT=$(pnpm start run ch-rename-test -c "SELECT count() FROM testdb.test_data;" -d testdb 2>&1 | grep -v '^>' | grep -oE '[0-9]+' | tail -1)
           if [ "$COUNT" != "3" ]; then
             echo "Initial data verification failed: expected 3 rows, got $COUNT"
             exit 1
@@ -949,7 +953,7 @@ jobs:
       - name: Verify data persists after rename
         shell: bash
         run: |
-          COUNT=$(pnpm start run ch-renamed-test -c "SELECT count() FROM testdb.test_data;" -d testdb 2>&1 | tail -n 4 | grep -oE '[0-9]+' | head -1)
+          COUNT=$(pnpm start run ch-renamed-test -c "SELECT count() FROM testdb.test_data;" -d testdb 2>&1 | grep -v '^>' | grep -oE '[0-9]+' | tail -1)
           if [ "$COUNT" != "3" ]; then
             echo "Data verification failed after rename: expected 3 rows, got $COUNT"
             echo "This likely means config.xml paths were not regenerated correctly"
