refactor: improve engine management menu UX with selectable list and submenu navigation
**Menu Handler:**
- Replace grouped engine list with flat selectable list showing all engines
- Add interactive submenu for individual engine management (delete, back, main menu)
- Update column widths (ENGINE 14→13, add PLATFORM 14, SIZE 10)
- Simplify total size calculation to single reduce operation
- Change action format from `delete:path:engine:version` to `select:path:engine:version:size`

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "tsx cli/bin.ts",
-    "dev": "tsx watch cli/bin.ts",
+    "dev": "tsx cli/bin.ts",
     "test": "run-s test:all",
     "test:pg": "node --import tsx --test --experimental-test-isolation=none tests/integration/postgresql.test.ts",
     "test:mysql": "node --import tsx --test --experimental-test-isolation=none tests/integration/mysql.test.ts",
