refactor: add Qdrant Windows diagnostics, REST API documentation, and test fixture requirements
**CI Workflow:**
- Add comment explaining Qdrant is REST API engine using HTTP requests instead of CLI shell
- Split "Show Qdrant logs on failure" into Unix and Windows versions with platform-specific conditions
- Add Windows PowerShell diagnostics using Get-ChildItem and Get-Content for container directories, binaries, and log files

**Gitignore:**
- Add `tests/fixtures/qdrant/snapshots/*.snapshot` to exclude large

--- a/.gitignore
+++ b/.gitignore
@@ -154,5 +154,8 @@ _dumps
 *.duckdb
 *.duckdb.wal
 
+# Qdrant snapshots (too large for git - use generate:qdrant-snapshot to create on demand)
+tests/fixtures/qdrant/snapshots/*.snapshot
+
 # Private docs
 MONETIZATION.md
