--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -666,6 +666,9 @@ jobs:
   # ============================================
   # Qdrant Integration Tests
   # Uses SpinDB to download and manage Qdrant binaries from hostdb
+  # NOTE: Qdrant is a REST API engine (no CLI shell like psql/redis-cli)
+  #       Tests use HTTP requests to interact with the database
+  #       Docker E2E tests use curl for connectivity/data operations
   # ============================================
   test-qdrant:
     name: Qdrant (${{ matrix.os }})
@@ -714,8 +717,8 @@ jobs:
         run: pnpm test:qdrant
         timeout-minutes: 15
 
-      - name: Show Qdrant logs on failure
-        if: failure()
+      - name: Show Qdrant logs on failure (Unix)
+        if: failure() && runner.os != 'Windows'
         run: |
           echo "=== Qdrant container directories ==="
           ls -la ~/.spindb/containers/qdrant/ 2>/dev/null || echo "No Qdrant containers directory"
@@ -725,6 +728,22 @@ jobs:
           echo ""
           echo "=== Qdrant log files ==="
           find ~/.spindb/containers/qdrant -name "*.log" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
+
+      - name: Show Qdrant logs on failure (Windows)
+        if: failure() && runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "=== Qdrant container directories ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\qdrant" -Recurse -ErrorAction SilentlyContinue | Select-Object FullName
+          Write-Host ""
+          Write-Host "=== Qdrant binary directory ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\bin" -Recurse -ErrorAction SilentlyContinue | Where-Object { $_.Name -like "qdrant*" } | Select-Object FullName
+          Write-Host ""
+          Write-Host "=== Qdrant log files ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\qdrant" -Filter "*.log" -Recurse -ErrorAction SilentlyContinue | ForEach-Object {
+            Write-Host "--- $($_.FullName) ---"
+            Get-Content $_.FullName -ErrorAction SilentlyContinue
+          }
 
   # ============================================
   # CLI End-to-End Tests (PostgreSQL + SQLite)
