--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     name: Unit Tests (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -127,7 +127,7 @@ jobs:
     name: PostgreSQL (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -181,7 +181,7 @@ jobs:
     name: MariaDB (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -233,7 +233,7 @@ jobs:
     name: MySQL (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -303,7 +303,7 @@ jobs:
     name: SQLite (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -354,7 +354,7 @@ jobs:
     name: DuckDB (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -405,7 +405,7 @@ jobs:
     name: MongoDB (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -456,7 +456,7 @@ jobs:
     name: Redis (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -530,7 +530,7 @@ jobs:
     name: Valkey (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -605,7 +605,7 @@ jobs:
     name: ClickHouse (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -674,7 +674,7 @@ jobs:
     name: Qdrant (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -752,7 +752,7 @@ jobs:
     name: CLI E2E (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-22.04
@@ -808,7 +808,7 @@ jobs:
     name: Rename & Clone (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-24.04
@@ -947,7 +947,7 @@ jobs:
     name: ClickHouse Rename (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-24.04
@@ -1069,7 +1069,7 @@ jobs:
     name: Fresh Install (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-24.04
@@ -1160,7 +1160,7 @@ jobs:
     name: Upgrade Test (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-24.04
@@ -1260,7 +1260,7 @@ jobs:
     name: Self-Update Test (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os:
           - ubuntu-24.04
@@ -1325,7 +1325,7 @@ jobs:
   #   # Native ARM64 runner (requires GitHub Teams/Enterprise or larger runners)
   #   runs-on: ubuntu-24.04-arm64
   #   strategy:
-  #     fail-fast: false
+  #     fail-fast: true
   #     matrix:
   #       test:
   #         - unit
